# nemail

./: .env.example  Cargo.toml
src/: config.rs  handlers.rs  main.rs  router.rs
src/handlers/: health_check_handler.rs
